--- a/PJA_Skills_032/Pages/OfferAddNewPage.xaml
+++ b/PJA_Skills_032/Pages/OfferAddNewPage.xaml
@@ -9,12 +9,19 @@
 
     <StackPanel Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
         <TextBox x:Name="TxtContent"
+                 Width="300"
+                 Margin="10, 10, 10, 10"
+                 HorizontalAlignment="Center"
                  AcceptsReturn="True"
                  Header="Offer content"
                  MaxLength="140"
                  PlaceholderText="Type your offer here..."
                  TextWrapping="Wrap" />
         <Button x:Name="BtnSave"
+                Width="300"
+                Margin="10, 10, 10, 10"
+                HorizontalAlignment="Center"
+                VerticalAlignment="Bottom"
                 Click="BtnSave_OnClick"
                 Content="Publish" />
 
