--- a/PJA_Skills_032/Shell.xaml
+++ b/PJA_Skills_032/Shell.xaml
@@ -1,49 +1,19 @@
-﻿<UserControl
-    x:Class="PJA_Skills_032.Shell"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:PJA_Skills_032"
-    xmlns:presentation="using:PJA_Skills_032.Presentation"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d"
-    d:DesignHeight="300"
-    d:DesignWidth="400">
+﻿<UserControl x:Class="PJA_Skills_032.Shell"
+             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:local="using:PJA_Skills_032"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:presentation="using:PJA_Skills_032.Presentation"
+             d:DesignHeight="300"
+             d:DesignWidth="400"
+             mc:Ignorable="d">
 
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
             <RowDefinition />
         </Grid.RowDefinitions>
-
-        <StackPanel Orientation="Horizontal" Background="#FFF44336" >
-            <Button Content="&#xE700;" Command="{x:Bind ViewModel.ToggleSplitViewPaneCommand}" Style="{StaticResource IconButtonStyle}"/>
-            <TextBlock Text="PJA Skills" Style="{StaticResource AppTitleTextBlockStyle}" />
-        </StackPanel>
-
-        <SplitView x:Name="SplitView" Grid.Row="1" IsPaneOpen="{x:Bind ViewModel.IsSplitViewPaneOpen, Mode=TwoWay}" >
-            <SplitView.Pane>
-                <ListView ItemsSource="{x:Bind ViewModel.MenuItems}"
-                          SelectedItem="{x:Bind ViewModel.SelectedMenuItem, Mode=TwoWay, Converter={StaticResource ObjectToMenuItemConverter}}">
-                    <ListView.ItemContainerStyle>
-                        <Style TargetType="ListViewItem">
-                            <Setter Property="Padding" Value="0" />
-                        </Style>
-                    </ListView.ItemContainerStyle>
-                    <ListView.ItemTemplate>
-                        <DataTemplate x:DataType="presentation:MenuItem">
-                            <StackPanel Orientation="Horizontal" Height="48">
-                                <TextBlock Grid.RowSpan="2" Text="{x:Bind Icon, Mode=OneWay}" Style="{StaticResource IconTextBlockStyle}" />
-                                <TextBlock Grid.Column="1" Text="{x:Bind Title, Mode=OneWay}" Style="{StaticResource MenuTitleTextBlockStyle}" />
-                            </StackPanel>
-                        </DataTemplate>
-                    </ListView.ItemTemplate>
-                </ListView>
-            </SplitView.Pane>
-            <SplitView.Content>
-                <Frame x:Name="Frame" SourcePageType="{x:Bind ViewModel.SelectedPageType, Mode=TwoWay}" />
-            </SplitView.Content>
-        </SplitView>
 
         <VisualStateManager.VisualStateGroups>
             <VisualStateGroup x:Name="WindowStates">
@@ -65,5 +35,48 @@
                 </VisualState>
             </VisualStateGroup>
         </VisualStateManager.VisualStateGroups>
+
+        <StackPanel Background="#FFF44336" Orientation="Horizontal">
+            <Button Command="{x:Bind ViewModel.ToggleSplitViewPaneCommand}"
+                    Content="&#xE700;"
+                    Foreground="White"
+                    Style="{StaticResource IconButtonStyle}" />
+            <TextBlock Foreground="White"
+                       Style="{StaticResource AppTitleTextBlockStyle}"
+                       Text="PJA Skills" />
+        </StackPanel>
+
+        <SplitView x:Name="SplitView"
+                   Grid.Row="1"
+                   IsPaneOpen="{x:Bind ViewModel.IsSplitViewPaneOpen, Mode=TwoWay}">
+            <SplitView.Pane>
+                <ListView Background="#FFF44336"
+                          ItemsSource="{x:Bind ViewModel.MenuItems}"
+                          SelectedItem="{x:Bind ViewModel.SelectedMenuItem, Mode=TwoWay, Converter={StaticResource ObjectToMenuItemConverter}}">
+                    <ListView.ItemContainerStyle>
+                        <Style TargetType="ListViewItem">
+                            <Setter Property="Padding" Value="0" />
+                        </Style>
+                    </ListView.ItemContainerStyle>
+                    <ListView.ItemTemplate>
+                        <DataTemplate x:DataType="presentation:MenuItem">
+                            <StackPanel Height="48" Orientation="Horizontal">
+                                <TextBlock Grid.RowSpan="2"
+                                           Foreground="White"
+                                           Style="{StaticResource IconTextBlockStyle}"
+                                           Text="{x:Bind Icon, Mode=OneWay}" />
+                                <TextBlock Grid.Column="1"
+                                           Foreground="White"
+                                           Style="{StaticResource MenuTitleTextBlockStyle}"
+                                           Text="{x:Bind Title, Mode=OneWay}" />
+                            </StackPanel>
+                        </DataTemplate>
+                    </ListView.ItemTemplate>
+                </ListView>
+            </SplitView.Pane>
+            <SplitView.Content>
+                <Frame x:Name="Frame" SourcePageType="{x:Bind ViewModel.SelectedPageType, Mode=TwoWay}" />
+            </SplitView.Content>
+        </SplitView>
     </Grid>
 </UserControl>
