FInal works (no icons)

--- a/PJA_Skills_032/Shell.xaml
+++ b/PJA_Skills_032/Shell.xaml
@@ -50,7 +50,7 @@
                    Grid.Row="1"
                    IsPaneOpen="{x:Bind ViewModel.IsSplitViewPaneOpen, Mode=TwoWay}">
             <SplitView.Pane>
-                <ListView Background="#FFF44336"
+                <ListView Background="#EB232F"
                           ItemsSource="{x:Bind ViewModel.MenuItems}"
                           SelectedItem="{x:Bind ViewModel.SelectedMenuItem, Mode=TwoWay, Converter={StaticResource ObjectToMenuItemConverter}}">
                     <ListView.ItemContainerStyle>
