--- a/PJA_Skills_032/Pages/HomePage.xaml
+++ b/PJA_Skills_032/Pages/HomePage.xaml
@@ -123,8 +123,8 @@
         <!--  #endregion  -->
     </Page.Resources>
 
-    <Page.BottomAppBar>
-        <!--  TODO: STYLE OVERRIDE  -->
+    <!--<Page.BottomAppBar>
+        --><!--  TODO: STYLE OVERRIDE  --><!--
         <CommandBar Foreground="White">
             <CommandBar.Background>
                 <SolidColorBrush Color="{StaticResource app_bar_red}" />
@@ -152,7 +152,7 @@
                 </i:Interaction.Behaviors>
             </AppBarButton>
         </CommandBar>
-    </Page.BottomAppBar>
+    </Page.BottomAppBar>-->
 
     <ScrollViewer Style="{StaticResource PageScrollViewerStyle}">
         <StackPanel Orientation="Vertical">
